--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
             <form>
               <div class="formFilter__item">
                 <label class="formFilter__name" for="name">Name</label>
-                <input class="formFilter__field" placeholder="test" type="text" id="name" />
+                <input class="formFilter__field" placeholder="Enter name" type="text" id="name" />
               </div>
               <div class="formFilter__item">
+
                 <label class="formFilter__name" for="school">School</label>
                 <select class="formFilter__book" id="school">
-                  <option value="books">Книги</option>
-                  <option value="html">HTML</option>
-                  <option value="css">CSS</option>
-                  <option value="php">PHP</option>
-                  <option value="js">JavaScript</option>
+                  <option value="gryffindor">Gryffindor</option>
+                  <option value="slytherin">Slytherin</option>
+                  <option value="hufflepuff">Hufflepuff</option>
+                  <option value="ravenclaw">Ravenclaw</option>
                 </select>
               </div>
             </form>
